# seafile-rustfs

./: .gitignore  Cargo.toml  README.md  log4rs.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
